cleaned up leftover files from pre-git process

--- a/log-mockup.html
+++ b/log-mockup.html
@@ -6,7 +6,9 @@
 	<meta charset="utf-8" />
 	<title>Log Details</title>
 	<!--should be set by js to mission number-->
+	
 	<link rel="stylesheet" type="text/css" href="logStyle.css">
+	<link rel="stylesheet" type="text/css" href="componentStyle.css">
 	<link rel="stylesheet" type="text/css" href="sortieDetailStyle.css">
 </head>
 
