reorganized css into separate files and started month editor layout

--- a/log-mockup.html
+++ b/log-mockup.html
@@ -8,7 +8,7 @@
 	<!--should be set by js to mission number-->
 	
 	<link rel="stylesheet" type="text/css" href="logStyle.css">
-	<link rel="stylesheet" type="text/css" href="componentStyle.css">
+	<link rel="stylesheet" type="text/css" href="components/componentStyle.css">
 	<link rel="stylesheet" type="text/css" href="sortieDetailStyle.css">
 </head>
 
