edit month page layout final

--- a/log-mockup.html
+++ b/log-mockup.html
@@ -1139,7 +1139,7 @@
 	<script src="components/inputSelectModal.js"></script>
 	<script src="components/inputDropdown.js"></script>
 	<script src="components/toast.js"></script>
-	<script src="logUI.js"></script>
+	<script src="sortieDetailScript.js"></script>
 </body>
 
 </html>
