--- a/log-mockup.html
+++ b/log-mockup.html
@@ -1131,7 +1131,7 @@
 
 
 	<!--<script src="calendar-display/vanillaCalendar.js"></script>-->
-
+	<script src="logLists.js"></script>
 	<script src="modalManager.js"></script>
 	<script src="components/calendar.js"></script>
 	<script src="components/inputDateTime.js"></script>
