--- a/monthEditor.htm
+++ b/monthEditor.htm
@@ -51,7 +51,7 @@
                 </table>
             </div>
             <div id="monthTableContainer">
-                <table>
+                <table id="monthTable">
                     <!-- <tr class="sortieRow">
                         <td class="smallCol">
                             <p>Unit</p>
@@ -564,8 +564,8 @@
         </div>
     </main>
 
-
-
+    <script src="logLists.js"></script>
+    <script src="logUtils.js"></script>
     <script src="modalManager.js"></script>
     <script src="components/calendar.js"></script>
     <script src="components/inputDateTime.js"></script>
