--- a/monthEditor.htm
+++ b/monthEditor.htm
@@ -425,6 +425,7 @@
     <script src="logUtils.js"></script>
     <script src="modalManager.js"></script>
     <script src="components/calendar.js"></script>
+    <script src="components/inputDateTimeModal.js"></script>
     <script src="components/inputDateTimeInline.js"></script>
     <script src="components/selectionList.js"></script>
     <script src="components/inputSelectModal.js"></script>
