Time Calculator initial version (without hr/minute breakdown)

--- a/monthEditor.htm
+++ b/monthEditor.htm
@@ -25,7 +25,7 @@
             <div class="button small" onclick="showToast('Test 123456789 perhaps this one is too long for the screen?  what if we just keep going and going and going and going?????')">🏠</div>
             <div class="button small" onclick="showToast('Number 2 has a little bit more to say!','skyblue',10000)">⚙️</div>
             <div class="button small" onclick="showToast('Testing 1... 2.... 3.. Gone!','',1000)">📊</div>
-            <div class="button small" onclick="showToast('This one is pink','pink')">🕒</div>
+            <div class="button small" onclick="new timeCalcModal(document.getElementById('headerMenu'))">🕒</div>
         </div>
 
     </header>
@@ -400,6 +400,7 @@
     <script src="components/inputSelectModal.js"></script>
     <script src="components/inputDropdown.js"></script>
     <script src="components/toast.js"></script>
+    <script src="components/timeCalculator.js"></script>
     <script src="monthEditorScript.js"></script>
 </body>
 
