--- a/monthEditor.htm
+++ b/monthEditor.htm
@@ -58,7 +58,7 @@
             </div>
             <div id="monthTableContainer">
                 <table id="monthTable">
-                    <tr class="sortieRow">
+                    <!-- <tr class="sortieRow">
                         <td class="smallCol">
                             <p>Unit</p>
                             <p>Type</p>
@@ -382,7 +382,7 @@
                             </div>
 
                         </td>
-                    </tr>
+                    </tr> -->
 
 
                 </table>
