Added Schema design. Added update functions to month editor text inputs.

--- a/log-mockup.html
+++ b/log-mockup.html
@@ -54,7 +54,7 @@
                 </tr>
                 <tr>
                     <td class="label topBorder">unit</td>
-                    <td field="squadron topBorder" table="Sortie" class="editDropdown">12RS</td>
+                    <td field="squadron topBorder" table="Sortie" class="editDropdown"><span class="dropdown-display">12RS</span></td>
                     <td class="label topBorder">type</td>
                     <td field="cocom" table="Sortie" class="editDropdown topBorder">LOCAL</td>
                 </tr>
